--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
-HOST='http://www.enspider.jp'
-TWITTER_API_KEY=
-TWITTER_API_SECRET=
-GOOGLE_CLIENT_ID='864707584986-hpvm0pq41qtuna6tsss4fces0gvjgclf.apps.googleusercontent.com'
-GOOGLE_CLIENT_SECRET='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'
-FACEBOOK_KEY=
-FACEBOOK_SECRET=
+TOMAIL=hs109105@gmail.com
+
+SMTP_USERNAME=hs109105@gmail.com
+SMTP_PASSWORD=nopwdlwhomjprsbs
